--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+    android:layout_margin="@dimen/margin"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/ivPoster"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="@dimen/item_image_width"
+        android:layout_height="@dimen/item_image_height"
         android:layout_gravity="center"
         android:src="@mipmap/ic_launcher" />
 
